--- a/checkstyle/pom.xml
+++ b/checkstyle/pom.xml
@@ -7,15 +7,19 @@
 	<artifactId>checkstyle-teaching</artifactId>
 	<version>8.33</version>
 
-	<!--packaging>jar</packaging--> <!-- todo necessary? -->
-
-	<dependencies>
-		<dependency>
-			<groupId>com.puppycrawl.tools</groupId>
-			<artifactId>checkstyle</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
+	<repositories>
+      <repository>
+        <id>gitlab-maven</id>
+        <url>https://git.scc.kit.edu/api/v4/projects/24947/packages/maven</url>
+      </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>edu.kit.kastel.sdq.artemis</groupId>
+            <artifactId>test-framework-checkstyle</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.4</version>
@@ -30,7 +34,7 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
